--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.0",
+    "mongoose": "^7.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
@@ -27,6 +27,7 @@
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.2.3",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
